--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "expo-font": "^9.0.0",
     "expo-linear-gradient": "^9.0.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-global-props": "^1.1.5",
     "react-native-image-crop-picker": "^0.36.0",
+    "react-native-open-maps": "^0.3.5",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.18.0",
+    "react-native-share": "^5.1.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^8.1.0"
