--- a/ios/myntraClone/Info.plist
+++ b/ios/myntraClone/Info.plist
@@ -77,6 +77,7 @@
 		<string>Roboto-Regular.ttf</string>
 		<string>Nunito-Bold.ttf</string>
 		<string>Nunito-SemiBold.ttf</string>
+		<string>Nunito-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
